@@ -15,6 +15,15 @@
 
 -------------------------------------------------------------------------------
 
+	2015-02-25
+
+	* Fix the lexer to handle MIME multipart messages properly when the
+	  boundary ended in "--".  The parser would previously never find the
+	  MIME parts because it mistook all boundaries ending in two dashes to
+	  be the final boundary of the multipart, rather than checking if the
+	  two dashes were extra.
+	  Reported by Matt Garretson to the bogofilter mailing list today.
+
 	2014-07-10
 
 	* Take patch from Julius Plenz to fix a bug in the charset converter
